# SOFA

applications/clis/SimulatePose/: CMakeLists.txt  SimulatePose.cxx  SimulatePose.xml
applications/plugins/SofaCUDA/sofa/gpu/cuda/: gpucuda.h
applications/plugins/ldidetection/: CMakeLists.txt  LICENCE.txt  README  ldidetection-dependencies.prf  ldidetection.pro
applications/plugins/ldidetection/examples/: TeoduleLDI.scn  ballBasic.scn  ballConstraint.scn  chainLDI.scn  cubesIntersection.scn
applications/plugins/ldidetection/lib/: ContactConstraint.cpp  ContactConstraint.h  ContactConstraint.inl  DepthPeeling.cpp  DepthPeeling.h  DepthPeelingUtility.cpp  DepthPeelingUtility.cu  DepthPeelingUtility.h  LDIConstraintContact.cpp  LDIConstraintContact.h  LDIConstraintContact.inl  LDIDetection.cpp  LDIDetection.h  LDIPenalityContact.cpp  LDIPenalityContact.h  LDIPenalityContact.inl  LDIPenalityContactForceField.cpp  LDIPenalityContactForceField.h  LDIPenalityContactForceField.inl  LayeredDepthImagesPipeline.cpp  LayeredDepthImagesPipeline.h  initldidetection.cpp  initldidetection.h  sofaldidetection.txt
applications/sofa/gui/qt/: RealGUI.cpp
cmake/: FindOPENGL.cmake  buildFlags.cmake  environment.cmake  installExternalLibraries.cmake  options.cmake
modules/sofa/component/SofaMeshCollision/: CMakeLists.txt
modules/sofa/component/collision/: TriangleModelInRegularGrid.h
modules/sofa/component/mapping/: SkinningMapping.inl
modules/sofa/component/mass/: UniformMass.inl
modules/sofa/component/topology/: TriangleSetGeometryAlgorithms.inl
